<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:id="@+id/imageView"
            android:src="@drawable/img_pinterest_logo"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:background="@drawable/shape_rect_white">

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/email_address"
                android:background="@android:color/transparent"
                android:padding="10dp"
                android:ems="10"
                android:id="@+id/editText" />
            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/gray2"/>

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:padding="10dp"
                android:background="@android:color/transparent"
                android:ems="10"
                android:id="@+id/editText2" />
            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/gray2"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:padding="5dp"
                android:layout_margin="10dp"
                android:id="@+id/editText3"
                android:text="@string/log_in"
                android:layout_gravity="center"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:textColor="@color/gray3"
            android:text="@string/or_log_in_using"
            android:id="@+id/textView" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp">

            <FrameLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_rect_fb"
                android:padding="10dp"
                android:layout_marginRight="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/facebook"
                    android:layout_gravity="center"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:id="@+id/textView2" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_rect_tw"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/twitter"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:id="@+id/textView3" />
            </FrameLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>